// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ActionDropdown > should be block styling 1`] = `
<div
  class="inline-block w-full"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-secondary action-btn-red action-btn-md action-btn-block"
      id="v-0"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        aria-hidden="true"
        class="inline-block self-center w-4 h-4"
        height="1.2em"
        role="img"
        viewBox="0 0 640 640"
        width="1.2em"
      >
        <path
          d="M297.4 470.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320 402.7L150.6 233.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
    
    
  </div>
  <!--v-if-->
</div>
`;

exports[`ActionDropdown > should be disabled 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-primary action-btn-blue action-btn-lg disabled"
      disabled=""
      id="v-0"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        aria-hidden="true"
        class="inline-block self-center w-4 h-4"
        height="1.2em"
        role="img"
        viewBox="0 0 640 640"
        width="1.2em"
      >
        <path
          d="M297.4 470.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320 402.7L150.6 233.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
    
    
  </div>
  <!--v-if-->
</div>
`;

exports[`ActionDropdown > should have a ghost kind with a blue variant 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-ghost action-btn-blue action-btn-sm"
      id="v-0"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        aria-hidden="true"
        class="inline-block self-center w-4 h-4"
        height="1.2em"
        role="img"
        viewBox="0 0 640 640"
        width="1.2em"
      >
        <path
          d="M297.4 470.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320 402.7L150.6 233.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
    
    
  </div>
  <!--v-if-->
</div>
`;

exports[`ActionDropdown > should have a lg size 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-ghost action-btn-gray action-btn-lg"
      id="v-0"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        aria-hidden="true"
        class="inline-block self-center w-4 h-4"
        height="1.2em"
        role="img"
        viewBox="0 0 640 640"
        width="1.2em"
      >
        <path
          d="M297.4 470.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320 402.7L150.6 233.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
    
    
  </div>
  <!--v-if-->
</div>
`;

exports[`ActionDropdown > should have a md size 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-secondary action-btn-red action-btn-md"
      id="v-0"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        aria-hidden="true"
        class="inline-block self-center w-4 h-4"
        height="1.2em"
        role="img"
        viewBox="0 0 640 640"
        width="1.2em"
      >
        <path
          d="M297.4 470.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320 402.7L150.6 233.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
    
    
  </div>
  <!--v-if-->
</div>
`;

exports[`ActionDropdown > should have a primary kind with a gray variant 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-primary action-btn-gray action-btn-sm"
      id="v-0"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        aria-hidden="true"
        class="inline-block self-center w-4 h-4"
        height="1.2em"
        role="img"
        viewBox="0 0 640 640"
        width="1.2em"
      >
        <path
          d="M297.4 470.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320 402.7L150.6 233.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
    
    
  </div>
  <!--v-if-->
</div>
`;

exports[`ActionDropdown > should have a secondary kind with a red variant 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-secondary action-btn-red action-btn-sm"
      id="v-0"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        aria-hidden="true"
        class="inline-block self-center w-4 h-4"
        height="1.2em"
        role="img"
        viewBox="0 0 640 640"
        width="1.2em"
      >
        <path
          d="M297.4 470.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320 402.7L150.6 233.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
    
    
  </div>
  <!--v-if-->
</div>
`;

exports[`ActionDropdown > should have an xs size 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-primary action-btn-blue action-btn-xs"
      id="v-0"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        aria-hidden="true"
        class="inline-block self-center w-4 h-4"
        height="1.2em"
        role="img"
        viewBox="0 0 640 640"
        width="1.2em"
      >
        <path
          d="M297.4 470.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320 402.7L150.6 233.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
    
    
  </div>
  <!--v-if-->
</div>
`;

exports[`ActionDropdown > should have the proper title 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-ghost action-btn-gray action-btn-sm"
      id="v-0"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      Title for the action dropdown
      
      <svg
        aria-hidden="true"
        class="inline-block self-center w-4 h-4"
        height="1.2em"
        role="img"
        viewBox="0 0 640 640"
        width="1.2em"
      >
        <path
          d="M297.4 470.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320 402.7L150.6 233.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
    
    
  </div>
  <!--v-if-->
</div>
`;

exports[`ActionDropdown > should hide the arrow 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-secondary action-btn-red action-btn-md"
      id="v-0"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <!--v-if-->
    </button>
    
    
  </div>
  <!--v-if-->
</div>
`;

exports[`ActionDropdown > should match its default snapshot 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-ghost action-btn-gray action-btn-sm"
      id="v-0"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        aria-hidden="true"
        class="inline-block self-center w-4 h-4"
        height="1.2em"
        role="img"
        viewBox="0 0 640 640"
        width="1.2em"
      >
        <path
          d="M297.4 470.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320 402.7L150.6 233.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
    
    
  </div>
  <!--v-if-->
</div>
`;

exports[`ActionDropdown > should match its kind ghost, variant white snapshot 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-ghost action-btn-white action-btn-sm"
      id="v-0"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        aria-hidden="true"
        class="inline-block self-center w-4 h-4"
        height="1.2em"
        role="img"
        viewBox="0 0 640 640"
        width="1.2em"
      >
        <path
          d="M297.4 470.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320 402.7L150.6 233.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
    
    
  </div>
  <!--v-if-->
</div>
`;

exports[`ActionDropdown > should match its kind primary, variant white snapshot 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-primary action-btn-white action-btn-sm"
      id="v-0"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        aria-hidden="true"
        class="inline-block self-center w-4 h-4"
        height="1.2em"
        role="img"
        viewBox="0 0 640 640"
        width="1.2em"
      >
        <path
          d="M297.4 470.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320 402.7L150.6 233.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
    
    
  </div>
  <!--v-if-->
</div>
`;

exports[`ActionDropdown > should match its kind secondary, variant white snapshot 1`] = `
<div
  class="inline-block"
  data-id="sds-action-dropdown"
>
  <div
    class="inline-block w-full"
  >
    
    <!-- @slot Trigger content (used to replace trigger button). @binding open, close, isOpen, toggle -->
    
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="space-x action-btn action-btn-secondary action-btn-white action-btn-sm"
      id="v-0"
      type="button"
    >
      <!-- @slot Title content of trigger button. -->
      
      
      
      <svg
        aria-hidden="true"
        class="inline-block self-center w-4 h-4"
        height="1.2em"
        role="img"
        viewBox="0 0 640 640"
        width="1.2em"
      >
        <path
          d="M297.4 470.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L320 402.7L150.6 233.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          fill="currentColor"
        />
      </svg>
    </button>
    
    
  </div>
  <!--v-if-->
</div>
`;
